Using the appropriate image label based on number of todays events. Fixing image alignment on index page.

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -4,7 +4,7 @@
 
 .event_group {
 	margin-bottom: 3em;
-	h1 img {
+	h2 img {
 		vertical-align: middle;
 	}
 }
